# sync-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  release.sh
.github/workflows/: cargo-release.yml  release-please.yml  release.yml
contrib/: README.md
contrib/aur/: PKGBUILD.template  setup-aur-ssh.sh  update-aur.sh
contrib/homebrew/: setup-git-auth.sh  sync-rs.rb.template  update-homebrew.sh
scripts/: publish-crate.sh
src/: cache.rs  config.rs  lib.rs  main.rs  sync.rs
