[package]
name = "sync-rs"
version = "1.1.1"
edition = "2021"
description = "A CLI tool to sync files between directories"
authors = ["Dest1n1s <destin@dest1n1s.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
